fixed colors on small screens

--- a/appstore/public/css/overrideColors.css
+++ b/appstore/public/css/overrideColors.css
@@ -1,14 +1,14 @@
 .top-bar {
-  background: #333333; }
+  background: #183158; }
     .top-bar.expanded .title-area {
-      background: #333333; }
+      background: #183158; }
     .top-bar.expanded .toggle-topbar a {
       color: #888888; }
 
   .top-bar-section ul {
-    background: #333333; }
+    background: #183158; }
   .top-bar-section ul li > a {
-    background: #333333; }
+    background: #183158; }
     .top-bar-section ul li > a.button {
       background-color: #008cba;
       border-color: #007095;
